@startuml
'https://plantuml.com/class-diagram

title US11 - Class Diagram

class DGSAdminUser {
    - admin_id: int
 }

class Person {
    # name: String
    # phone_number: int
    # email: String
}

class Vaccine {
   - name : String
   - brand : String
   - tech_used : String
   - lot : String
   - disease : String
   --
   + createVaccine(): Vaccine
}


Person <|-- DGSAdminUser
DGSAdminUser --> Vaccine : registers >

@enduml